--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,19 @@
-*{
+
+body{
     margin: 0;
     padding: 0;
 }
-header{
+
+.background{
+    width: 100%;
+    height: 100vh;
+    background-image: url("../img/205913.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.topbar{
     display: grid;
     width: 100%;
     grid-template-columns: 50% 50%;
@@ -10,9 +21,15 @@ header{
     color: #656570;
     font-family: Arial, Helvetica, sans-serif;
 }
+
+.titulo {
+    margin: 15px;
+}
+
 ul, ol{
     list-style: none;
 }
+
 .nav li a{
     width: 100px;
     background-color: #181620;
@@ -21,26 +38,23 @@ ul, ol{
     padding: 10px 25px;
     display: inline-block;
 }
-.nav li a:hover{
-    background-color: #656570;
-    color: #181620;
-}
+
 .nav > li{
     float: right;
 }
+
 .nav li ul{
     display:none;
     position: absolute;
     min-width: 100px;
 }
+
+.nav li a:hover{
+    background-color: #656570;
+    color: #181620;
+}
+
 .nav li:hover > ul{
     display: block;
 }
-main{
-    width: 100%;
-    height: 95vh;
-    background-image: url("../assets/img/205913.jpg");
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-}
+
